--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,30 @@
 .App {
+  &__overlay {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff80;
+    z-index: 3;
+    transform: translateY(20%);
+    pointer-events: none;
+    display: none;
+    visibility: hidden;
+
+    &--visible {
+      display: block;
+      visibility: visible;
+      pointer-events: all;
+      transform: translateY(0);
+      overflow: hidden;
+
+      animation-duration: 0.2s;
+      animation-timing-function: ease;
+      animation-name: animateModal;
+    }
+  }
+
+  overflow: hidden;
+
   &__header {
     font-family: 'Courier New', Courier, monospace;
     font-size: 36px;
@@ -6,5 +32,21 @@
     padding: 0px 20px;
     color: #000;
     border-bottom: 1px solid #d3d6da;
+  }
+
+  &__main {
+    display: flex;
+    justify-content: center;
+    overflow-y: hidden;
+  }
+}
+
+@keyframes animateModal {
+  from {
+    transform: translateY(20%);
+  }
+
+  to {
+    transform: translateY(0);
   }
 }
