--- a/src/App.scss
+++ b/src/App.scss
@@ -36,8 +36,11 @@
 
   &__main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     overflow-y: hidden;
+    margin: 0 auto;
   }
 }
 
